@startuml

title __OPERATOR's Class Diagram__\n

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Complete {
            - runnable : Runnable
            - publisher : Publisher<T>
            + Complete()
            + subscribe()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Error {
            - publisher : Publisher<T>
            - error : Consumer<Throwable>
            + Error()
            + subscribe()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Filter {
            - predicate : Predicate<T>
            - flux : Publisher<T>
            + Filter()
            + subscribe()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Flatter {
            - flux : Publisher<T>
            - function : Function<T, Publisher<R>>
            + Flatter()
            + subscribe()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Mapper {
            - flux : Publisher<T>
            - function : Function<T, R>
            + Mapper()
            + subscribe()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Proceeder {
            - flux : Publisher<T>
            - consumer : Consumer<T>
            + Proceeder()
            + subscribe()
        }
      }
    }
  }
  

  package  {
    package site.namsu.sweng {
      package site.namsu.sweng.rx.operator {
        class Reducer {
            - flux : Publisher<T>
            - biFunction : BiFunction<R, T, R>
            + Reducer()
            + subscribe()
        }
      }
    }
  }
  

  Complete -up-|> Publisher
  Error -up-|> Publisher
  Filter -up-|> Publisher
  Flatter -up-|> Publisher
  Mapper -up-|> Publisher
  Proceeder -up-|> Publisher
  Reducer -up-|> Publisher
  Reducer o-- R : temp


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
